--- a/StringCalculator/StringCalculator.csproj
+++ b/StringCalculator/StringCalculator.csproj
@@ -66,7 +66,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="StringCalculator.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="StringCalculatorShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
