--- a/GildedRose.Tests/GildedRose.Tests.csproj
+++ b/GildedRose.Tests/GildedRose.Tests.csproj
@@ -81,7 +81,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="GildedRose.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
